# ProtoLLM

./: README.rst  README_en.rst  pyproject.toml  requirements.txt
.github/workflows/: integration-build.yml  publish_and_release.yml  unit-build.yml
examples/: agent_graph_builder_example.py  connector_creator_usage_example.py  llama31_usage_example.py  metrics_usage_examples.py
examples/universal_agents/: re_and_planner_example.py  summary_example.py  supervisor_example.py
protollm/: definitions.py
protollm-synthetic/: README.md
protollm-synthetic/examples/: rag_example.py
protollm/agents/: README.md  agent_prompts.py  builder.py  scenario_agent_example.py  universal_agents.py
protollm/connectors/: README.md  __init__.py  connector_creator.py  rest_server.py  utils.py
protollm/ensembles_ma/: collect_results.py
protollm/metrics/: __init__.py  deepeval_connector.py  evaluation_metrics.py
protollm/rags/: jobs.py
protollm/tools/: web_tools.py
protollm_synthetic/examples/: aspect_summarisation_example.py  free_query_example.py  quiz_example.py  rag_example.py  summarisation_example.py
protollm_synthetic/protollm_synthetic/: utils.py
protollm_synthetic/tests/: test_summarization_chain.py
protollm_tools/llm-api/: README.md  docker-compose.yml  pyproject.toml  test.py
protollm_tools/llm-worker/: pyproject.toml  requirements.txt
protollm_tools/llm_api/: docker-compose.yml
protollm_tools/llm_worker/: docker-compose.yml  main.py
protollm_tools/sdk/: docker-compose.yml  pyproject.toml  test.py
tests/: mock_chat_model.py  test_agent.py  test_connector.py  test_metrics.py
tests/unit/: test_agents_nodes.py  test_chroma_utils.py  test_configs.py  (+4 more)
(+191 files in other folders)
