[tool.poetry]
readme = "README_en.rst"
name = "ProtoLLM"
version = "0.1.1"
description = ""
authors = ["aimclub"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
celery = "^5.4.0"
click = "8.1.7"
kombu = "^5.3.7"
redis = "^5.0.6"
flower = "^2.0.1"
pika = "^1.3.2"
pydantic = "^2.7.4"
pydantic-core = "2.23.4"
pydantic-settings = "2.7.1"
requests = "^2.32.3"
fastapi = "^0.111.0"
httpx = "^0.27.0"
tornado = "^6.4.1"
websockets = "14.1"
urllib3 = "^2.2.2"
langchain = "^0.3.4"
langchain-chroma = "0.1.4"
langchain-core = "0.3.34"
langchain-community = "0.3.16"
langchain-elasticsearch = "0.3.2"
langchain-openai = "0.3.3"
langchain-text-splitters = "^0.3.3"
langchain-gigachat = "0.3.3"
openai = "^1.42.0"
transformers = "4.48.2"
deepeval= { version = "2.3.3", python = ">=3.10,<3.14" }
chromadb = "^0.5.0"
python-dotenv = "1.0.1"
protollm-sdk = "1.1.6"
pandas = "^2.2.3"
pyyaml = "6.0.2"
tqdm = "4.67.1"
uuid = "^1.30"
pypdf2 = "3.0.1"
pdfplumber = "0.11.5"
pytesseract = "0.3.13"
ftfy = "6.3.1"
pdf2image = "1.17.0"
"pdfminer.six" = "20231228"
tabulate = "0.9.0"
pillow = "11.1.0"
numpy = "1.26.4"
python-docx = "1.1.2"
chardet = "5.2.0"
spacy = { version = "3.8.4", python = ">=3.10,<3.13"}

# Optional for LLM deployment
protollm-api = { version = "^1.0.5", optional = true}
protollm-worker = { version = "^1.0.5", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"

[tool.poetry.extras]
api-tools = ["protollm-api", "protollm-worker"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
